--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,3 +1,12 @@
-.navbar {
-    
+#map-container {
+    position: relative;
+    width: 200px;
+    height: 200px
+}
+
+#poll-page {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    border: 1px solid black;
 }
