--- a/client/public/style.css
+++ b/client/public/style.css
@@ -29,7 +29,6 @@
     flex-wrap: wrap;
     align-content: space-around;
     justify-content: space-around;
-    border: 2px solid black;
 }
 
 #navbar {
@@ -41,4 +40,12 @@
 
 #logout {
     max-width: 100px;
+}
+
+#user-profile {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: flex-start;
 }
