--- a/client/public/style.css
+++ b/client/public/style.css
@@ -48,4 +48,11 @@
     flex-wrap: wrap;
     align-content: flex-start;
     justify-content: flex-start;
+    padding: 10px;
+    margin: 10px;
+}
+
+button {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
