--- a/client/public/style.css
+++ b/client/public/style.css
@@ -94,11 +94,12 @@ button {
     margin: 10px;
 }
 
-#pod-members {
+#pod-members, #pod-adventures {
     display: flex;
     flex-direction: column;
     align-content: flex-start;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding: 10px;
     margin: 10px;
+    max-width: 147px;
 }
