--- a/public/style.css
+++ b/public/style.css
@@ -88,26 +88,6 @@ button {
     text-align: center;
 }
 
-#pod-content {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: space-between;
-    padding: 10px;
-    margin: 10px;
-}
-
-#pod-members, #pod-adventures {
-    display: flex;
-    flex-direction: column;
-    align-content: flex-start;
-    justify-content: flex-start;
-    padding: 10px;
-    margin: 10px;
-    max-width: 147px;
-}
-
 #poll-page, #mapbox-map, #map-and-poll {
     padding: 0;
     margin: 0;
@@ -149,4 +129,10 @@ button {
     border-radius: 50%;
     background: #4CAF50;
     cursor: pointer;
+}
+
+#pod-member-cards {
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
 }
