row scroll on pod page

--- a/public/style.css
+++ b/public/style.css
@@ -139,7 +139,7 @@ button {
 #pod-member-cards {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: flex-start;
 }
 
 #adventure-cards {
@@ -154,4 +154,9 @@ button {
 
 #add-to-pod-button {
     margin: 0px;
+}
+
+.testimonial-group {
+    overflow-x: scroll;
+    white-space: nowrap;
 }
