updates adventures styling

--- a/public/style.css
+++ b/public/style.css
@@ -180,3 +180,8 @@ button {
     margin: 0px;
 }
 
+#all-user-adventures {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
